--- a/doc/tex/TTBar_Xsecs_Appendix.tex
+++ b/doc/tex/TTBar_Xsecs_Appendix.tex
@@ -1,3 +1,185 @@
+\section{Relic density constraints for $b-$flavored Dark Matter}
+\label{app:Relic_Density_bFDM}
+
+For Dirac fermion DM the relic density is governed primarily by the $s$-wave annihilation cross section, which is given approximately given by:
+\begin{equation}
+\langle \sigma v \rangle = \frac{3g^4}{32\pi} \frac{m^2_\chi \sqrt{1-(m_b/m_\chi)^2}}{\left( m^2_\Phi+m^2_\chi-m^2_b \right)} \approx \frac{3g^4 m^2_\chi}{32\pi (m^2_\Phi+m^2_\chi)}
+\end{equation}
+
+We assume $ \langle \sigma v \rangle=1.5$~pb. 
+
+%For Majorana fermion DM the relic density is governed primarily by the $p$-wave annihilation cross section, which is given approximately by
+%\begin{equation}
+% \langle \sigma v \rangle \approx a+bv^2,~ b=g^4\frac{m^2_\chi (m^4_B + m^4_\chi)}{16 \pi (m^2_B+m^2_\chi)}
+%\end{equation}
+
+Figure~\ref{fig:relic_weights} shows the weights obtained for various dark matter and mediator massed required to obtain the correct relic density observed in the early universe.
+
+\begin{figure}[h!]
+	\centering 
+	\includegraphics[scale=0.5]{figures/bFDM/relic_weights.eps}
+	\caption{Coupling constants required to obtain correct relic density in the early universe . \label{fig:relic_weights}}
+	\end{figure}	
+	
+\section{Cross sections for $b-$flavored Dark Matter}
+\label{app:xsecs_bFDM}
+
+\begin{table}[h]
+	\centering
+	\begin{tabular}{lll|lll}
+		\hline \hline
+		$m_\chi $  & $m_\Phi$ & $\sigma$ [pb] & $m_\chi $  & $m_\Phi$ & $\sigma$ [pb]\\ \hline \hline
+		100 & 1000 & 5.48E-03 & 150 & 600  & 1.23E-01 \\\hline
+		100 & 100  & 1.91E-02 & 200 & 1000 & 4.94E-03 \\\hline
+		100 & 1300 & 8.90E-04 & 200 & 1300 & 7.82E-04 \\\hline
+		100 & 150  & 6.66E+00 & 200 & 200  & 2.66E-03 \\\hline
+		100 & 200  & 9.86E+00 & 200 & 250  & 6.48E-01 \\\hline
+		100 & 250  & 7.67E+00 & 200 & 300  & 1.69E+00 \\\hline
+		100 & 300  & 4.12E+00 & 200 & 400  & 9.41E-01 \\\hline
+		100 & 400  & 1.11E+00 & 200 & 600  & 1.16E-01 \\\hline
+		100 & 600  & 1.30E-01 & 35  & 250  & 9.75E+00 \\\hline
+		10  & 1000 & 5.80E-03 & 35  & 300  & 4.56E+00 \\\hline
+		10  & 100  & 7.84E+01 & 35  & 350  & 2.22E+00 \\\hline
+		10  & 10   & 4.09E-01 & 35  & 400  & 1.19E+00 \\\hline
+		10  & 1300 & 9.53E-04 & 35  & 500  & 3.76E-01 \\\hline
+		10  & 150  & 3.95E+01 & 35  & 550  & 2.24E-01 \\\hline
+		10  & 200  & 2.12E+01 & 35  & 600  & 1.37E-01 \\\hline
+		10  & 250  & 9.92E+00 & 35  & 650  & 8.62E-02 \\\hline
+		10  & 300  & 4.57E+00 & 35  & 700  & 5.54E-02 \\\hline
+		10  & 400  & 1.20E+00 & 50  & 1000 & 5.72E-03 \\\hline
+		10  & 50   & 1.59E+02 & 50  & 100  & 3.25E+01 \\\hline
+		10  & 600  & 1.38E-01 & 50  & 1300 & 9.34E-04 \\\hline
+		150 & 1000 & 5.22E-03 & 50  & 150  & 2.84E+01 \\\hline
+		150 & 1300 & 8.37E-04 & 50  & 200  & 1.84E+01 \\\hline
+		150 & 150  & 6.64E-03 & 50  & 250  & 9.52E+00 \\\hline
+		150 & 200  & 1.87E+00 & 50  & 300  & 4.49E+00 \\\hline
+		150 & 250  & 3.86E+00 & 50  & 400  & 1.17E+00 \\\hline
+		150 & 300  & 3.35E+00 & 50  & 50   & 7.06E-02 \\\hline
+		150 & 400  & 1.03E+00 & 50  & 600  & 1.36E-01 \\\hline
+		\hline
+	\end{tabular}
+	\caption{Dark matter masses $m_{\chi}$ and mediator masses $m_{\Phi}$ generated for $g=1$ for 13 TeV. The resulting
+		production cross sections are given in pb.\label{tab:g1_13T}}
+\end{table}
+
+
+\begin{table}[h]
+	\centering
+	\begin{tabular}{lll|lll}
+		\hline \hline
+		$m_\chi $  & $m_\Phi$ & $\sigma$ [pb] & $m_\chi $  & $m_\Phi$ & $\sigma$ [pb]\\ \hline \hline
+		100 & 1000 & 1.50E-02 & 150 & 600  & 1.22E-01 \\\hline
+		100 & 100  & 1.13E-04 & 200 & 1000 & 7.04E-03 \\\hline
+		100 & 1300 & 7.05E-03 & 200 & 1300 & 2.11E-03 \\\hline
+		100 & 150  & 6.12E+00 & 200 & 200  & 6.29E-05 \\\hline
+		100 & 200  & 9.60E+00 & 200 & 250  & 5.83E-01 \\\hline
+		100 & 250  & 7.57E+00 & 200 & 300  & 1.64E+00 \\\hline
+		100 & 300  & 4.01E+00 & 200 & 400  & 9.08E-01 \\\hline
+		100 & 400  & 1.06E+00 & 200 & 600  & 1.11E-01 \\\hline
+		100 & 600  & 1.45E-01 & 35  & 250  & 9.62E+00 \\\hline
+		10  & 1000 & 3.55E-01 & 35  & 300  & 4.56E+00 \\\hline
+		10  & 100  & 7.67E+01 & 35  & 350  & 2.35E+00 \\\hline
+		10  & 10   & 2.43E-05 & 35  & 400  & 1.33E+00 \\\hline
+		10  & 1300 & 2.35E-01 & 35  & 500  & 5.48E-01 \\\hline
+		10  & 150  & 3.92E+01 & 35  & 550  & 3.80E-01 \\\hline
+		10  & 200  & 2.13E+01 & 35  & 600  & 2.76E-01 \\\hline
+		10  & 250  & 1.05E+01 & 35  & 650  & 2.07E-01 \\\hline
+		10  & 300  & 5.57E+00 & 35  & 700  & 1.60E-01 \\\hline
+		10  & 400  & 2.35E+00 & 50  & 1000 & 3.69E-02 \\\hline
+		10  & 50   & 1.51E+02 & 50  & 100  & 3.07E+01 \\\hline
+		10  & 600  & 8.16E-01 & 50  & 1300 & 2.39E-02 \\\hline
+		150 & 1000 & 9.44E-03 & 50  & 150  & 2.76E+01 \\\hline
+		150 & 1300 & 3.44E-03 & 50  & 200  & 1.82E+01 \\\hline
+		150 & 150  & 8.84E-05 & 50  & 250  & 9.31E+00 \\\hline
+		150 & 200  & 1.69E+00 & 50  & 300  & 4.40E+00 \\\hline
+		150 & 250  & 3.76E+00 & 50  & 400  & 1.22E+00 \\\hline
+		150 & 300  & 3.29E+00 & 50  & 50   & 1.04E-04 \\\hline
+		150 & 400  & 9.83E-01 & 50  & 600  & 2.14E-01 \\\hline
+		\hline
+	\end{tabular}
+	\caption{Dark matter masses $m_{\chi}$ and mediator masses $m_{\Phi}$ generated such that relic density constraints are fullfilled for 13 TeV. The resulting
+		production cross sections are given in pb.\label{tab:g_relic_13T}}
+\end{table}
+
+\begin{table}[h]
+	\centering
+	\begin{tabular}{lll|lll}
+		\hline \hline
+		$m_\chi $  & $m_\Phi$ & $\sigma$ [pb] & $m_\chi $  & $m_\Phi$ & $\sigma$ [pb]\\ \hline \hline
+		100 & 1000 & 1.50E-02 & 150 & 600  & 1.22E-01 \\\hline
+		100 & 100  & 1.13E-04 & 200 & 1000 & 7.04E-03 \\\hline
+		100 & 1300 & 7.05E-03 & 200 & 1300 & 2.11E-03 \\\hline
+		100 & 150  & 6.12E+00 & 200 & 200  & 6.29E-05 \\\hline
+		100 & 200  & 9.60E+00 & 200 & 250  & 5.83E-01 \\\hline
+		100 & 250  & 7.57E+00 & 200 & 300  & 1.64E+00 \\\hline
+		100 & 300  & 4.01E+00 & 200 & 400  & 9.08E-01 \\\hline
+		100 & 400  & 1.06E+00 & 200 & 600  & 1.11E-01 \\\hline
+		100 & 600  & 1.45E-01 & 35  & 250  & 9.62E+00 \\\hline
+		10  & 1000 & 3.55E-01 & 35  & 300  & 4.56E+00 \\\hline
+		10  & 100  & 7.67E+01 & 35  & 350  & 2.35E+00 \\\hline
+		10  & 10   & 2.43E-05 & 35  & 400  & 1.33E+00 \\\hline
+		10  & 1300 & 2.35E-01 & 35  & 500  & 5.48E-01 \\\hline
+		10  & 150  & 3.92E+01 & 35  & 550  & 3.80E-01 \\\hline
+		10  & 200  & 2.13E+01 & 35  & 600  & 2.76E-01 \\\hline
+		10  & 250  & 1.05E+01 & 35  & 650  & 2.07E-01 \\\hline
+		10  & 300  & 5.57E+00 & 35  & 700  & 1.60E-01 \\\hline
+		10  & 400  & 2.35E+00 & 50  & 1000 & 3.69E-02 \\\hline
+		10  & 50   & 1.51E+02 & 50  & 100  & 3.07E+01 \\\hline
+		10  & 600  & 8.16E-01 & 50  & 1300 & 2.39E-02 \\\hline
+		150 & 1000 & 9.44E-03 & 50  & 150  & 2.76E+01 \\\hline
+		150 & 1300 & 3.44E-03 & 50  & 200  & 1.82E+01 \\\hline
+		150 & 150  & 8.84E-05 & 50  & 250  & 9.31E+00 \\\hline
+		150 & 200  & 1.69E+00 & 50  & 300  & 4.40E+00 \\\hline
+		150 & 250  & 3.76E+00 & 50  & 400  & 1.22E+00 \\\hline
+		150 & 300  & 3.29E+00 & 50  & 50   & 1.04E-04 \\\hline
+		150 & 400  & 9.83E-01 & 50  & 600  & 2.14E-01 \\\hline
+		\hline
+	\end{tabular}
+	\caption{Dark matter masses $m_{\chi}$ and mediator masses $m_{\Phi}$ generated such that relic density constraints are fullfilled for 13 TeV. The resulting
+		production cross sections are given in pb.\label{tab:g_relic_13T}}
+\end{table}
+
+
+\begin{table}[h]
+	\centering
+	\begin{tabular}{lll|lll}
+		\hline \hline
+		$m_\chi $  & $m_\Phi$ & $\sigma$ [pb] & $m_\chi $  & $m_\Phi$ & $\sigma$ [pb]\\ \hline \hline
+		100 & 1000 & 1.53E-03 & 150 & 600  & 1.61E-02 \\\hline
+		100 & 100  & 2.21E-05 & 200 & 1000 & 5.46E-04 \\\hline
+		100 & 1300 & 7.91E-04 & 200 & 1300 & 1.54E-04 \\\hline
+		100 & 150  & 1.58E+00 & 200 & 200  & 9.52E-06 \\\hline
+		100 & 200  & 2.48E+00 & 200 & 250  & 1.22E-01 \\\hline
+		100 & 250  & 1.82E+00 & 200 & 300  & 3.53E-01 \\\hline
+		100 & 300  & 8.77E-01 & 200 & 400  & 1.65E-01 \\\hline
+		100 & 400  & 1.94E-01 & 200 & 600  & 1.43E-02 \\\hline
+		100 & 600  & 2.00E-02 & 35  & 250  & 2.32E+00 \\\hline
+		10  & 1000 & 5.61E-02 & 35  & 300  & 1.00E+00 \\\hline
+		10  & 100  & 2.36E+01 & 35  & 350  & 4.73E-01 \\\hline
+		10  & 10   & 6.53E-06 & 35  & 400  & 2.51E-01 \\\hline
+		10  & 1300 & 3.62E-02 & 35  & 500  & 9.23E-02 \\\hline
+		10  & 150  & 1.12E+01 & 35  & 550  & 6.07E-02 \\\hline
+		10  & 200  & 5.61E+00 & 35  & 600  & 4.20E-02 \\\hline
+		10  & 250  & 2.50E+00 & 35  & 650  & 3.02E-02 \\\hline
+		10  & 300  & 1.21E+00 & 35  & 700  & 2.25E-02 \\\hline
+		10  & 400  & 4.53E-01 & 50  & 1000 & 4.70E-03 \\\hline
+		10  & 50   & 4.83E+01 & 50  & 100  & 8.88E+00 \\\hline
+		10  & 600  & 1.34E-01 & 50  & 1300 & 3.34E-03 \\\hline
+		150 & 1000 & 8.21E-04 & 50  & 150  & 7.83E+00 \\\hline
+		150 & 1300 & 3.07E-04 & 50  & 200  & 4.80E+00 \\\hline
+		150 & 150  & 1.52E-05 & 50  & 250  & 2.25E+00 \\\hline
+		150 & 200  & 3.93E-01 & 50  & 300  & 9.67E-01 \\\hline
+		150 & 250  & 8.86E-01 & 50  & 400  & 2.28E-01 \\\hline
+		150 & 300  & 7.19E-01 & 50  & 50   & 2.37E-05 \\\hline
+		150 & 400  & 1.79E-01 & 50  & 600  & 3.15E-02 \\\hline
+		\hline
+	\end{tabular}
+	\caption{Dark matter masses $m_{\chi}$ and mediator masses $m_{\Phi}$ generated for such that relic density constraints are fullfilled for 8 TeV. The resulting
+		production cross sections are given in pb.\label{tab:g_relic_8T}}
+\end{table}
+
+
+
 \section{Cross sections for the $t\bar t$+DM scalar simplified model}
 
 \begin{longtable}{lllll}
