--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -1,7 +1,8 @@
 A model of bottom-flavored Dark Matter ($b$-FDM) has been proposed in Ref.~\cite{Agrawal:2014una} to explain the Galactic Center (GC) gamma-ray excess observed in data collected by the Fermi-LAT collaboration~\cite{Daylan:2014rsa}.
 
 The increase from 8 to 13 TeV will lead to large cross section improvements, as shown in Appendix~\ref{app:xsecs_bFDM}. 
-Production of heavier mediators requires high $x$ in the PDFs, and the increase in the center of mass energy leads to a cross-section increase that is a function of $m_\Phi$, with a smaller dependency for $m_{\rm DM}$. Therefore, the sensitivity to this model will increase in early 13~TeV data compared to the 8 TeV searches~\cite{Aad:2014vea}.
+%Production of heavier mediators requires high $x$ in the PDFs, and 
+The increase in the center of mass energy leads to a cross-section increase that is a function of $m_\Phi$, with a smaller dependency for $m_{\rm DM}$. Therefore, the sensitivity to this model will increase in early 13~TeV data compared to the 8 TeV searches~\cite{Aad:2014vea}.
 
 The model contains a Dirac fermion transforming as a flavor triplet. The third component of the triplet $\chi_b$ comprises the cosmological DM. A flavor singlet, color triplet scalar field $\Phi$ mediates the interactions between the DM and the Standard Model quarks.The model is similar to the MSSM with a light bottom squark and neutralino, and is thus a flavor-specific
 example of a $t$-channel model. 
