--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -308,6 +308,7 @@ to the dimension 8 operator.
 
 
 \subsection{Validity of EW contact operators and possible completions}
+\label{sub:validityEWContact}
 
 It is important to remember that the operators described in 
 this section may present problems in terms of the validity of the contact interaction
@@ -329,6 +330,7 @@ However, this may be the focus of future theoretical exploration:
 an example of a complete model 
 for scalar DM corresponding to the dimension-5 operator 
 is provided in the Appendix~\ref{app:EWSpecificModels_Appendix}. 
+\Todo{Add references from Uli's paper, Rayleigh DM}.
 Providing results for the pure EFT limit of these models will prove useful
 to cross-check the implementation of future. 
 
