--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -258,7 +258,7 @@ The generator level cross section times the acceptance at $\MET>500$\,GeV for th
 
 Based on these arguments, the following $\mMed$ grid points are chosen, roughly equidistant in the logarithmic scale: 10\,GeV, 20\,GeV, 50\,GeV,  100\,GeV, 200\,GeV, 300\,GeV, 500\,GeV, 1000\,GeV and 2000\,GeV. Given the fact that significant changes in cross section happen around the $\mMed=2\mdm$ threshold, the $\mdm$ grid points are taken at approximately $\mMed/2$, namely: 10\,GeV, 50\,GeV, 150\,GeV, 500\,GeV and 1000\,GeV. Points on the on-shell diagonal are always chosen to be 5 GeV away from the threshold, 
 to avoid numerical instabilities in the event generation. 
-The detailed studies of the impact of the parameter changes on the cross section and kinematic distributions presented earlier in this section support removing some of the grid points and rely on interpolation. The optimised grids proposed for the vector and axial-vector mediators are given in Table.\,\ref{tab:mDMmMedScan_VA}, containing 29 mass points each. One point at very high mediator mass (5 TeV) is added for each of the DM masses scanned, to aid the reinterpretation of results in terms of contact interaction operators (EFTs). 
+The detailed studies of the impact of the parameter changes on the cross section and kinematic distributions presented earlier in this section support removing some of the grid points and rely on interpolation. The optimised grids proposed for the vector and axial-vector mediators are given in Table.\,\ref{tab:mDMmMedScan_VA}, containing 29 mass points each. One point at very high mediator mass (5 TeV) is added for each of the DM masses scanned, to aid the reinterpretation of results in terms of contact interaction operators (EFTs) as discussed in Section~\ref{sec:RecommendationEFTResults}. 
 
 % \begin{figure}
 % \centering
@@ -276,11 +276,11 @@ The detailed studies of the impact of the parameter changes on the cross section
 \multicolumn{1}{|c|}{\mdm/GeV} & \multicolumn{10}{c|}{\mmed/GeV} \\
 \hline
  1             &         10  & 20 & 50 & 100 & 200 & 300 & 500 &         1000  &                 2000   &         5000  \\
- 10   	       &         10  & 15 & 50 & 100 & \ditto    & \ditto    & \ditto    &   \ditto            &      \ditto                  &         \ditto  \\
+ 10   	       &         10  & 15 & 50 & 100 &     &     &     &               &                        &           \\
  50            &   10  & 
-& 50 &  95 & 200 & 300 &  \ditto   & \ditto              &    \ditto                    &         \ditto  \\
- 150           &         10  &    &    &     & 200 & 295 & 500 &   \ditto     &          \ditto        &         \ditto  \\
- 500           &         10  &    &    &     &     &     & 500 &          995  &                 2000   &         \ditto  \\
+& 50 &  95 & 200 & 300 &     &               &                        &           \\
+ 150           &         10  &    &    &     & 200 & 295 & 500 &        &                  &           \\
+ 500           &         10  &    &    &     &     &     & 500 &          995  &                 2000   &           \\
  1000          &         10  &    &    &     &     &     &     &         1000  &                 1995   &         5000  \\
 \hline
 \end{tabular}
